--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,37 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+signing.keyId=0BD313AF
+signing.password=gwhwdkhth
+signing.secretKeyRingFile=D:/certs/creditsdk/secret.gpg
+
+ossrhUsername=linuszhong
+ossrhPassword=Iotpay888666!
+
+VERSION_NAME=1.0.0
+
+POM_NAME=iotpay-credit
+POM_ARTIFACT_ID=creditcardsdk
+POM_GROUP_ID= io.github.zhongzeyu.creditcardsdk
+POM_ARTIFACT=IOTPayAndroidCredit-1.0.0.aar   
+POM_URL=https://github.com/zhongzeyu/creditcardsdk.github.io
+POM_PACKAGING=aar
+POM_DESCRIPTION=creditlib
+
+POM_SCM_URL=https://github.com/zhongzeyu/creditcardsdk.github.io
+POM_SCM_CONNECTION=scm:git@https://github.com/zhongzeyu/creditcardsdk.github.io.git
+POM_SCM_DEV_CONNECTION=scm:git@https://github.com/zhongzeyu/creditcardsdk.github.io.git
+
+POM_LICENCE_COMMENTS=A business-friendly OSS license
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+
+POM_DEVELOPER_ID=linuszhong    #???????id
+POM_DEVELOPER_NAME=linus   #?????????
+POM_DEVELOPER_EMAIL=linuszhong@hotmail.com   #?????????
+POM_DEVELOPER_URL=https://github.com/zhongzeyu/
+POM_ISSUE_MANAGEMENT_SYSTEM=GitLab
+POM_ISSUE_MANAGEMENT_URL=https://github.com/zhongzeyu/creditcardsdk.github.io/issues
+POM_INCEPTION_YEAR=2021
+
