--- a/IOTPayAndroidCredit/build.gradle
+++ b/IOTPayAndroidCredit/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.14.1'
-
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 
 /*
